--- a/ServicuerosSA/Views/Lotes/Index.cshtml
+++ b/ServicuerosSA/Views/Lotes/Index.cshtml
@@ -45,7 +45,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                        data-dismiss="modal" aria-label="Close" onclick="cerrarmodalLotes()">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="EtiquetaModal">
@@ -85,7 +85,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="cerrarmodalLotes();">Cerrar</button>
                 <button type="button" class="btn btn-primary" onclick="Impresion('areaImprimir');">Imprimir</button>
             </div>
         </div>
